src/test/compile-fail/issue-1476.rs
fn main() {
    log(error, x); //~ ERROR unresolved name: x
}
